--- a/homeassistant/components/ecovent_v2/manifest.json
+++ b/homeassistant/components/ecovent_v2/manifest.json
@@ -3,13 +3,11 @@
   "name": "EcoVentV2",
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/ecovent_v2",
-  "requirements": ["pyEcoventV2==0.9.11"],
+  "requirements": ["pyEcoventV2==0.9.12"],
   "ssdp": [],
   "zeroconf": [],
   "homekit": {},
   "dependencies": [],
-  "codeowners": [
-    "@gody01"
-  ],
+  "codeowners": ["@gody01"],
   "iot_class": "local_polling"
 }
